[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tarp"
version = "0.0.1"
authors = [
  { name="Yop038", email="yop038@protonmail.ch" },
]
description = "Python Library to multithread / multi-computer Tar"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yop0382/tarp"
"Bug Tracker" = "https://github.com/yop0382/tarp/issues"